test/org/midica/testfiles/failing/var-not-enough-args.midica
INCLUDE inc/instruments.midica

VAR $x


0  $x  /4
